Completed url for fire and phone alerts